{{$NEXT}}

0.43     2016-03-20

- Added [CheckChangesHasContent].

- Added [Test::CLeanNamespaces].

- If the distro has XS code [PPPort] is added and the generated ppport.h is
  copied from the build into the repo.

- This bundle now generates a CONTRIBUTING.md file automatically.

- Added a new Pod::Weaver author bundle that replaces the one-time generation
  of a weaver.ini file.

- Fixed README.md generation to happen after pod weaving, instead of before.


0.42     2016-02-01

- Disabled the Subroutines::ProhibitExplicitReturnUndef policy in the
  generated perlcriticrc file.


0.41     2016-01-29

- Added the Test::CPAN::Meta::JSON plugin.


0.40 2015-11-24

- Added a new plugin, DROLSKY::Git::CheckFor::CorrectBranch. This plugin only
  checks that the branch is correct on non-TRIAL releases.


0.39     2015-11-24

- Added a use_github_homepage config option.


0.38     2015-09-28

- Remove the RewriteVersion plugin and use my own version provider that simply
  reads the version from the main module. I don't want things appending '#
  TRIAL' comments to my version lines and un-tidying my code.


0.37     2015-08-15

- Include MojibakeTests plugin.


0.36     2015-07-12

- Don't include Test::Pod::LinkCheck and Test::Pod::No404s when running under Travis.


0.35     2015-07-05

- Make it possible to use GitHub issues instead of rt.cpan.org.


0.34     2015-05-14

- Always set xt_mode to true for Test::Compile.


0.33     2015-03-10

- Set --iterations=2 in generated perltidyrc.


0.32     2015-02-08

- Set --blank-lines-before-packages=0 in generated perltidyrc.


0.31     2015-01-15

- Perl::Critic and Perl::Tidy need to be the develop requires list for modules
  using this bundle, not in the prereqs of the bundle itself.


0.30     2015-01-13

- Make sure that Perl::Critic and Perl::Tidy end up in the prereqs for the
  benefit of the tidyall test.


0.29     2015-01-11

- Made the plugin bundle commit and push the post-release version bump.

